Tue Aug 10 10:56:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* Makefile.am TODO configure.in libgamin/Makefile.am libgamin/TODO
	  server/Makefile.am lib/*: applied cleanup patch from John McCutchan
	  then rebuilt the lib/ subdir providing shared code between the
	  client lib and the server (gam_error and gam_event).
	* server/gam_inotify.c: update as part of John McCutchan patch.

Fri Aug  6 17:09:53 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in: to not link with glib threads, not needed anymore
	* libgamin/gam_api.c: fixed timeouts values
	* tests/Makefile.am tests/testing.c tests/result/4 tests/scenario/4.tst:
	  adding more tests, especially transparent restart when the server
	  is killed.

Fri Aug  6 14:29:47 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_fork.c: avoid generating zombies

Thu Aug  5 16:51:33 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.5
	* doc/gamin-api.xml doc/gamin-refs.xml: rebuilt

Thu Aug  5 16:23:18 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_event.h server/gam_inotify.c server/gam_server.c:
	  patches from John McCutchan, inotify back-end update and 
	  bugfixes on error conditions in gam_server.c

Thu Aug  5 11:55:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_fork.c: markmc pointed at a problem when forking
	  a daemon and exiting, the exit(0) called the ORBit atexit 
	  handlers in the child.

Thu Aug  4 16:55:38 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.4

Wed Aug  4 14:34:27 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: update
	* libgamin/gam_error.c libgamin/gam_error.h server/gam_error.c
	  server/gam_error.h: cleanup some warnings when compiling
	  on Fedora Core
	* server/gam_poll.c: unused variable
	* tests/Makefile.am: cleanup before running "make tests"

Wed Aug  4 13:14:02 CEST 2004 Daniel Veillard <veillard@redhat.com>
