@@ -1,3 +1,13 @@
+Wed Aug 11 13:18:04 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in lib/Makefile.am libgamin/Makefile.am libgamin/gam_fork.c
+	  server/Makefile.am server/gam_dnotify.c server/gam_inotify.c 
+	  server/gam_node.c server/gam_node.hserver/gam_poll.c server/gam_tree.c
+	  server/gam_server.c: cleanup patch from John McCutchan removing
+	  comented out thread code, modularization of makefiles, and
+	  use of $GAMIN_DEBUG_SERVER for debug or test when the client forks
+	  a new server.
+
 Tue Aug 10 10:56:49 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am TODO configure.in libgamin/Makefile.am libgamin/TODO
